----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2004-02-04 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/sqlparser.lib.php: bug 890573 (was a typo)

2004-02-03 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_change.php: bug 879923, NULL default value of DATETIME field

2004-02-02 Marc Delisle  <lem9@users.sourceforge.net>
    * export.php: security fix, thanks to Cedric Cochin for the advisory
    * lang/slovak: Updated, thanks to Lubos Klokner (erkac).

2004-02-02 Alexander M. Turek  <supposedformerinfatuationjunkie@derrabus.de>
    * libraries/mysql_charsets.lib.php: Use PMA_backquote().

2004-01-31 Michal Cihar  <whyisitsocold@cihar.com>
    * lang/czech: Update.

2004-01-23 Alexander M. Turek  <stormfront@derrabus.de>
    * lang/german-*.inc.php: Updates.

2004-01-29 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/catalan: Updated, thanks to Xavier Navarro (xavin)
    * lang/italian: Updated, thanks to Pietro Danesi (danone).
    * lang/danish: updates, thanks to Finn Sorensen (alleyman01)
    * lang/*, header.inc.php, db_details_links.php, sql.php,
      libraries/functions.js: new stronger warning before a DROP DATABASE

2004-01-28 Garvin Hicking <MyDoom@supergarv.de>
    * browser_foreigners, tbl_change.php, tbl_indexes.php,
      tbl_properties_structure.php, tbl_relation.php, tbl_select.php,
      libraries/get_foreign.lib.php, libraries/relation.lib.php:
      Get rid of mysql_data_seek(). Use pre-cached PHP array for
      mysqli compatibility and bandwidth saving.

2004-01-27 Marc Delisle  <lem9@users.sourceforge.net>
    * main.php: bug 884606, MySQL version check before server choice

2004-01-26 Robin Johnson <robbat2@users.sourceforge.net>
    * libraries/dbi/mysql.dbi.lib.php: Correct the default parameter for
    PMA_DBI_insert_id($link = '') and convert file back to UNIX linefeeds.

2004-01-25 Marc Delisle  <lem9@users.sourceforge.net>